--- a/ui/src/features/books/book.scss
+++ b/ui/src/features/books/book.scss
@@ -34,4 +34,11 @@
     flex-grow: 1;
     min-width: 0;
   }
+
+  .button-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+  }
 }
